--- a/login.env
+++ b/login.env
@@ -1,8 +1,8 @@
-TG-KEY=;
-SESSION-STRING= ;
-DB-HOST=;
-DB-USER=;
-DB-PSW=;
-DB-DB=;
-API-ID=;
-API-HASH=;
+TG-KEY=
+SESSION-STRING=
+DB-HOST=
+DB-USER=
+DB-PSW=
+DB-DB=
+API-ID=
+API-HASH=
